--- a/index.html
+++ b/index.html
@@ -10,432 +10,7 @@
     <meta property="og:description" content="Développeur Backend & Data — Projets, expertise technique et parcours.">
     <meta property="og:type" content="website">
     <title>Lotfi Melouane | Portfolio 2026</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Plus+Jakarta+Sans:wght@400;700;800&display=swap');
-
-        :root {
-            --tata-yellow: #F4D03F;
-            --tata-red: #E74C3C;
-            --tata-green: #1ABC9C;
-            --tata-tan: #FFF9C4;
-            --tata-black: #1A1A1B;
-        }
-
-        body {
-            font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: #E5E7EB;
-            color: var(--tata-black);
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden;
-        }
-
-        .mono {
-            font-family: 'Space Mono', monospace;
-        }
-
-        /* Texture de grain style Tata Rekso */
-        .grainy::before {
-            content: "";
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-            opacity: 0.06;
-            pointer-events: none;
-            z-index: 9999;
-        }
-
-        .sidebar-gradient {
-            background: linear-gradient(to bottom, var(--tata-yellow), #F39C12, var(--tata-red), var(--tata-green));
-        }
-
-        .nav-vertical {
-            writing-mode: vertical-rl;
-            transform: rotate(180deg);
-        }
-
-        /* Animations de dévoilement */
-        .reveal {
-            opacity: 0;
-            transform: translateY(20px) scale(0.98);
-            transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
-        }
-
-        .reveal.active {
-            opacity: 1;
-            transform: translateY(0) scale(1);
-        }
-
-        .bento-tile {
-            border: 2px solid #000;
-            background: white;
-            transition: all 0.25s ease;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-
-        .bento-tile:hover {
-            transform: translate(-3px, -3px);
-            box-shadow: 8px 8px 0px #000;
-        }
-
-        /* Scrollbar brute */
-        ::-webkit-scrollbar {
-            width: 10px;
-        }
-
-        ::-webkit-scrollbar-track {
-            background: #000;
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: var(--tata-yellow);
-            border: 2px solid #000;
-        }
-
-        .tag-pill {
-            border: 1px solid #000;
-            padding: 2px 8px;
-            font-size: 10px;
-            font-weight: bold;
-            text-transform: uppercase;
-            font-family: 'Space Mono', monospace;
-            cursor: pointer;
-            transition: all 0.2s;
-        }
-
-        .tag-pill:hover {
-            background: black;
-            color: white;
-        }
-
-        input,
-        textarea {
-            border: 2px solid #000;
-            padding: 10px;
-            font-family: 'Space Mono', monospace;
-            font-size: 12px;
-            width: 100%;
-            background: #fff;
-            color: black;
-        }
-
-        input:focus,
-        textarea:focus {
-            outline: none;
-            box-shadow: 4px 4px 0px #000;
-        }
-
-        #success-msg {
-            display: none;
-        }
-
-        /* Modal Fullscreen */
-        .modal-overlay {
-            position: fixed;
-            inset: 0;
-            background: rgba(0, 0, 0, 0.85);
-            z-index: 10000;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 0;
-            pointer-events: none;
-            transition: opacity 0.4s cubic-bezier(0.16, 1, 0.3, 1);
-            backdrop-filter: blur(8px);
-            overflow-y: auto;
-        }
-
-        .modal-overlay.open {
-            opacity: 1;
-            pointer-events: all;
-        }
-
-        .modal-content {
-            background: white;
-            color: #1A1A1B;
-            width: 92vw;
-            max-width: 1100px;
-            max-height: 90vh;
-            overflow-y: auto;
-            border: 3px solid #000;
-            transform: scale(0.92) translateY(30px);
-            transition: transform 0.5s cubic-bezier(0.16, 1, 0.3, 1);
-            position: relative;
-        }
-
-        .modal-overlay.open .modal-content {
-            transform: scale(1) translateY(0);
-        }
-
-        .modal-close {
-            position: sticky;
-            top: 0;
-            right: 0;
-            z-index: 10;
-            float: right;
-            width: 50px;
-            height: 50px;
-            background: #000;
-            color: #fff;
-            border: none;
-            font-size: 24px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: background 0.2s;
-        }
-
-        .modal-close:hover {
-            background: #E74C3C;
-        }
-
-        .modal-header {
-            padding: 40px 40px 20px;
-        }
-
-        .modal-header .tag-pill {
-            margin-bottom: 12px;
-            display: inline-block;
-        }
-
-        .modal-header h2 {
-            font-size: 3rem;
-            font-weight: 900;
-            text-transform: uppercase;
-            letter-spacing: -0.04em;
-            line-height: 1;
-        }
-
-        .modal-body {
-            padding: 0 40px 40px;
-        }
-
-        .modal-body h4 {
-            font-size: 1.1rem;
-            font-weight: 900;
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
-            margin-bottom: 8px;
-            border-bottom: 2px solid #000;
-            padding-bottom: 6px;
-            display: inline-block;
-        }
-
-        .modal-body p,
-        .modal-body li {
-            font-size: 0.95rem;
-            line-height: 1.7;
-            color: #444;
-        }
-
-        .modal-body ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .modal-body ul li::before {
-            content: "▸ ";
-            font-weight: 900;
-            color: #1ABC9C;
-        }
-
-        .modal-img {
-            width: 100%;
-            max-height: 400px;
-            object-fit: cover;
-            border-bottom: 3px solid #000;
-        }
-
-        .modal-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 30px;
-            margin-top: 20px;
-        }
-
-        @media (max-width: 768px) {
-            .modal-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .modal-header h2 {
-                font-size: 2rem;
-            }
-
-            .modal-header,
-            .modal-body {
-                padding-left: 20px;
-                padding-right: 20px;
-            }
-        }
-
-        /* Project card hover overlay */
-        .project-card {
-            cursor: pointer;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .project-card .hover-label {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.9);
-            color: #F4D03F;
-            text-align: center;
-            padding: 14px;
-            font-family: 'Space Mono', monospace;
-            font-size: 11px;
-            font-weight: 700;
-            text-transform: uppercase;
-            letter-spacing: 0.15em;
-            transform: translateY(100%);
-            transition: transform 0.3s cubic-bezier(0.16, 1, 0.3, 1);
-        }
-
-        .project-card:hover .hover-label {
-            transform: translateY(0);
-        }
-
-        /* Back to top */
-        .back-to-top {
-            position: fixed;
-            bottom: 30px;
-            right: 30px;
-            z-index: 9998;
-            width: 48px;
-            height: 48px;
-            background: #000;
-            color: #F4D03F;
-            border: 2px solid #000;
-            font-size: 18px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 0;
-            pointer-events: none;
-            transition: all 0.3s;
-            box-shadow: 4px 4px 0px #F4D03F;
-        }
-
-        .back-to-top.visible {
-            opacity: 1;
-            pointer-events: all;
-        }
-
-        .back-to-top:hover {
-            transform: translate(-2px, -2px);
-            box-shadow: 6px 6px 0px #F4D03F;
-        }
-
-        /* Active nav */
-        .nav-link-active {
-            color: white !important;
-            text-shadow: 0 0 8px rgba(255, 255, 255, 0.5);
-        }
-
-        /* Timeline */
-        .timeline {
-            position: relative;
-            padding-left: 30px;
-        }
-
-        .timeline::before {
-            content: '';
-            position: absolute;
-            left: 8px;
-            top: 0;
-            bottom: 0;
-            width: 3px;
-            background: #000;
-        }
-
-        .timeline-item {
-            position: relative;
-            margin-bottom: 32px;
-        }
-
-        .timeline-item::before {
-            content: '';
-            position: absolute;
-            left: -26px;
-            top: 6px;
-            width: 14px;
-            height: 14px;
-            background: #F4D03F;
-            border: 3px solid #000;
-            border-radius: 50%;
-        }
-
-        .timeline-item.active-item::before {
-            background: #1ABC9C;
-            box-shadow: 0 0 0 4px rgba(26, 188, 156, 0.3);
-        }
-
-        .timeline-year {
-            font-family: 'Space Mono', monospace;
-            font-size: 10px;
-            font-weight: 700;
-            text-transform: uppercase;
-            letter-spacing: 0.2em;
-            color: #888;
-        }
-
-        .timeline-title {
-            font-size: 1.1rem;
-            font-weight: 900;
-            text-transform: uppercase;
-            letter-spacing: -0.02em;
-            margin-top: 2px;
-        }
-
-        .timeline-desc {
-            font-size: 0.8rem;
-            color: #666;
-            margin-top: 4px;
-            line-height: 1.5;
-        }
-
-        /* Staggered reveal */
-        .reveal {
-            transition-delay: 0s;
-        }
-
-        .reveal:nth-child(2) {
-            transition-delay: 0.08s;
-        }
-
-        .reveal:nth-child(3) {
-            transition-delay: 0.16s;
-        }
-
-        .reveal:nth-child(4) {
-            transition-delay: 0.24s;
-        }
-
-        /* Skill bar animation */
-        .skill-bar {
-            transition: width 1.2s cubic-bezier(0.16, 1, 0.3, 1);
-        }
-
-        .skill-bar.animate {
-            width: var(--target-width);
-        }
-
-        body.modal-open {
-            overflow: hidden;
-        }
-    </style>
 </head>
 
 <body class="grainy min-h-screen text-black">
@@ -1099,88 +674,7 @@
         </div>
     </div>
 
-    <script>
-        // Reveal Observer
-        const revealObserver = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) { entry.target.classList.add('active'); }
-            });
-        }, { threshold: 0.1 });
-        document.querySelectorAll('.reveal').forEach(el => revealObserver.observe(el));
-
-        // Gestion du Formulaire
-        const contactForm = document.getElementById('contact-form');
-        const formContainer = document.getElementById('form-container');
-        const successMsg = document.getElementById('success-msg');
-        if (contactForm) {
-            contactForm.addEventListener('submit', function (e) {
-                e.preventDefault();
-                formContainer.style.display = 'none';
-                successMsg.style.display = 'flex';
-            });
-        }
-        window.resetForm = function () {
-            contactForm.reset();
-            formContainer.style.display = 'block';
-            successMsg.style.display = 'none';
-        }
-
-        // === MODALES ===
-        function openModal(id) {
-            const m = document.getElementById('modal-' + id);
-            if (!m) return;
-            m.classList.add('open');
-            document.body.classList.add('modal-open');
-        }
-        function closeModal(id) {
-            const m = document.getElementById('modal-' + id);
-            if (!m) return;
-            m.classList.remove('open');
-            document.body.classList.remove('modal-open');
-        }
-        document.querySelectorAll('.project-card').forEach(card => {
-            card.addEventListener('click', function (e) {
-                if (e.target.closest('a')) return; // don't hijack tag links
-                openModal(this.dataset.project);
-            });
-        });
-        document.querySelectorAll('.modal-overlay').forEach(overlay => {
-            overlay.addEventListener('click', function (e) {
-                if (e.target === this) {
-                    const id = this.id.replace('modal-', '');
-                    closeModal(id);
-                }
-            });
-        });
-        document.addEventListener('keydown', function (e) {
-            if (e.key === 'Escape') {
-                document.querySelectorAll('.modal-overlay.open').forEach(m => {
-                    m.classList.remove('open');
-                    document.body.classList.remove('modal-open');
-                });
-            }
-        });
-
-        // === ACTIVE NAV ===
-        const sections = document.querySelectorAll('section[id]');
-        const navLinks = document.querySelectorAll('.nav-link');
-        const navObserver = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    navLinks.forEach(l => l.classList.remove('nav-link-active'));
-                    const active = document.querySelector('.nav-link[data-section="' + entry.target.id + '"]');
-                    if (active) active.classList.add('nav-link-active');
-                }
-            });
-        }, { threshold: 0.3, rootMargin: '-10% 0px -60% 0px' });
-        sections.forEach(s => navObserver.observe(s));
-
-        // === BACK TO TOP ===
-        const backBtn = document.getElementById('backToTop');
-        window.addEventListener('scroll', () => {
-            backBtn.classList.toggle('visible', window.scrollY > 600);
-        });
-    </script>
+    <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
