Update competencies section with value-added bullet points

--- a/index.html
+++ b/index.html
@@ -265,112 +265,152 @@
         <!-- SECTION 3 : EXPERTISE -->
         <section id="competences" class="grid grid-cols-12 gap-2 text-black">
             <!-- Colonne de gauche : Savoir-Faire Corporate -->
-            <div class="col-span-12 lg:col-span-4 bento-tile p-10 md:p-12 reveal active text-black border-black bg-white">
+            <div
+                class="col-span-12 lg:col-span-4 bento-tile p-10 md:p-12 reveal active text-black border-black bg-white">
                 <h2 class="text-5xl font-black italic mb-10 uppercase tracking-tighter leading-none text-black">
-                    Expertise <br> <span class="text-tata-green">technique</span>
+                    Compétences <br> <span class="text-tata-green">Clés</span>
                 </h2>
                 <div class="space-y-8">
                     <!-- Compétence 1 -->
                     <div class="flex items-start gap-4">
-                        <div class="mt-1 bg-black text-white min-w-[32px] w-8 h-8 flex items-center justify-center border-2 border-black">
+                        <div
+                            class="mt-1 bg-black text-white min-w-[32px] w-8 h-8 flex items-center justify-center border-2 border-black">
                             <i class="fa-solid fa-sitemap"></i>
                         </div>
                         <div>
                             <h4 class="font-black uppercase text-sm leading-tight">Conception d'Architecture</h4>
-                            <p class="text-xs text-slate-600 mt-1 font-medium leading-relaxed">Design de systèmes d'information scalables et modélisation de bases de données (MCD/MLD).</p>
+                            <p class="text-xs text-slate-600 mt-1 font-medium leading-relaxed">Design de systèmes
+                                d'information scalables et modélisation de bases de données (MCD/MLD).</p>
                         </div>
                     </div>
                     <!-- Compétence 2 -->
                     <div class="flex items-start gap-4">
-                        <div class="mt-1 bg-black text-white min-w-[32px] w-8 h-8 flex items-center justify-center border-2 border-black">
+                        <div
+                            class="mt-1 bg-black text-white min-w-[32px] w-8 h-8 flex items-center justify-center border-2 border-black">
                             <i class="fa-solid fa-shield-halved"></i>
                         </div>
                         <div>
                             <h4 class="font-black uppercase text-sm leading-tight">Sécurisation de Données</h4>
-                            <p class="text-xs text-slate-600 mt-1 font-medium leading-relaxed">Mise en place d'authentification JWT, gestion des rôles et sécurisation des API REST.</p>
+                            <p class="text-xs text-slate-600 mt-1 font-medium leading-relaxed">Mise en place
+                                d'authentification JWT, gestion des rôles et sécurisation des API REST.</p>
                         </div>
                     </div>
                     <!-- Compétence 3 -->
                     <div class="flex items-start gap-4">
-                        <div class="mt-1 bg-black text-white min-w-[32px] w-8 h-8 flex items-center justify-center border-2 border-black">
+                        <div
+                            class="mt-1 bg-black text-white min-w-[32px] w-8 h-8 flex items-center justify-center border-2 border-black">
                             <i class="fa-solid fa-database"></i>
                         </div>
                         <div>
                             <h4 class="font-black uppercase text-sm leading-tight">Administration de BDD</h4>
-                            <p class="text-xs text-slate-600 mt-1 font-medium leading-relaxed">Optimisation de requêtes complexes, gestion de l'historisation et maintenance (Oracle, PostgreSQL).</p>
+                            <p class="text-xs text-slate-600 mt-1 font-medium leading-relaxed">Optimisation de requêtes
+                                complexes, gestion de l'historisation et maintenance (Oracle, PostgreSQL).</p>
                         </div>
                     </div>
                     <!-- Compétence 4 -->
                     <div class="flex items-start gap-4">
-                        <div class="mt-1 bg-black text-white min-w-[32px] w-8 h-8 flex items-center justify-center border-2 border-black">
+                        <div
+                            class="mt-1 bg-black text-white min-w-[32px] w-8 h-8 flex items-center justify-center border-2 border-black">
                             <i class="fa-solid fa-people-group"></i>
                         </div>
                         <div>
                             <h4 class="font-black uppercase text-sm leading-tight">Gestion de Projet</h4>
-                            <p class="text-xs text-slate-600 mt-1 font-medium leading-relaxed">Intégration aux méthodologies Agiles (Scrum), versionning Git et travail en équipe multicompétences.</p>
+                            <p class="text-xs text-slate-600 mt-1 font-medium leading-relaxed">Intégration aux
+                                méthodologies Agiles (Scrum), versionning Git et travail en équipe multicompétences.</p>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="col-span-12 lg:col-span-8 grid grid-cols-1 md:grid-cols-2 gap-2 text-black">
-                <!-- Stack Logiciel -->
+                <!-- Stack Logiciel / Valeur Ajoutée -->
                 <div id="exp-backend" class="bento-tile bg-tata-tan p-8 reveal active border-black scroll-mt-24">
                     <div class="h-full flex flex-col justify-between">
                         <div>
-                            <span class="mono text-[10px] font-black uppercase mb-4 block opacity-50 text-black">Backend & API</span>
-                            <h4 class="text-3xl font-black uppercase mb-6 tracking-tight text-black leading-none">Ingénierie <br> Logicielle</h4>
-                            <div class="flex flex-wrap gap-2 text-black">
-                                <span class="tag-pill border-black bg-white">Python / Flask</span>
-                                <span class="tag-pill border-black bg-white">Java / C</span>
-                                <span class="tag-pill border-black bg-white">Architectures REST</span>
-                                <span class="tag-pill border-black bg-white">Algorithmique</span>
-                                <span class="tag-pill border-black bg-white">Design Patterns</span>
-                                <span class="tag-pill border-black bg-white">Tests Unitaires</span>
-                            </div>
+                            <span
+                                class="mono text-[10px] font-black uppercase mb-4 block opacity-50 text-black">Proposition
+                                de valeur</span>
+                            <h4 class="text-3xl font-black uppercase mb-6 tracking-tight text-black leading-none">
+                                Solutions <br> Backend & API</h4>
+                            <p class="text-sm font-medium leading-relaxed text-slate-800 mb-6">
+                                Je ne me contente pas d'écrire du code. Je conçois des services backend pensés avant
+                                tout pour la performance, la sécurité et la maintenabilité à long terme.
+                            </p>
+                            <ul class="space-y-3 text-xs font-bold text-slate-700">
+                                <li class="flex items-start gap-3">
+                                    <i class="fa-solid fa-check text-black mt-0.5"></i>
+                                    <span>Conception et développement d'APIs RESTful sécurisées (Python,
+                                        Java/Spring).</span>
+                                </li>
+                                <li class="flex items-start gap-3">
+                                    <i class="fa-solid fa-check text-black mt-0.5"></i>
+                                    <span>Architecture logicielle modulaire et découplage des responsabilités.</span>
+                                </li>
+                                <li class="flex items-start gap-3">
+                                    <i class="fa-solid fa-check text-black mt-0.5"></i>
+                                    <span>Intégration de logiques métier complexes et de systèmes
+                                        d'authentification.</span>
+                                </li>
+                            </ul>
                         </div>
-                        <p class="text-xs font-bold leading-relaxed text-slate-600 mt-6 text-black">Création de services backend robustes, maintenables et performants, centrés sur la logique métier.</p>
                     </div>
                 </div>
 
-                <!-- Stack Data -->
-                <div id="exp-data" class="bento-tile bg-tata-green p-8 reveal active border-black text-white scroll-mt-24">
+                <!-- Stack Data / Valeur Ajoutée -->
+                <div id="exp-data"
+                    class="bento-tile bg-tata-green p-8 reveal active border-black text-white scroll-mt-24">
                     <div id="exp-viz" class="h-full flex flex-col justify-between text-white scroll-mt-24">
                         <div>
-                            <span class="mono text-[10px] font-black uppercase mb-4 block opacity-70 text-white">Stockage & Flux</span>
-                            <h4 class="text-3xl font-black uppercase mb-6 tracking-tight text-white leading-none">Data <br> Engineering</h4>
-                            <div class="flex flex-wrap gap-2">
-                                <span class="tag-pill border-white bg-white text-black">Oracle SQL</span>
-                                <span class="tag-pill border-white bg-white text-black">Talend (ETL)</span>
-                                <span class="tag-pill border-white bg-white text-black">NoSQL</span>
-                                <span class="tag-pill border-white bg-white text-black">Data Warehouse</span>
-                                <span class="tag-pill border-white bg-white text-black">Pandas / Numpy</span>
-                                <span class="tag-pill border-white bg-white text-black">Visualisation</span>
-                            </div>
+                            <span class="mono text-[10px] font-black uppercase mb-4 block opacity-70 text-white">Domaine
+                                d'intervention</span>
+                            <h4 class="text-3xl font-black uppercase mb-6 tracking-tight text-white leading-none">
+                                Ingénierie <br> de la Donnée</h4>
+                            <p class="text-sm font-medium leading-relaxed opacity-90 mb-6">
+                                De l'extraction à la visualisation, je transforme la donnée brute (structurée ou
+                                textuelle) en une véritable information stratégique et exploitable.
+                            </p>
+                            <ul class="space-y-3 text-xs font-bold text-white/90">
+                                <li class="flex items-start gap-3">
+                                    <i class="fa-solid fa-arrow-right text-tata-yellow mt-0.5"></i>
+                                    <span>Modélisation fine d'entrepôts décisionnels Data Warehouse (Architecture en
+                                        étoile).</span>
+                                </li>
+                                <li class="flex items-start gap-3">
+                                    <i class="fa-solid fa-arrow-right text-tata-yellow mt-0.5"></i>
+                                    <span>Développement et supervision de pipelines de données et flux ETL
+                                        robustes.</span>
+                                </li>
+                                <li class="flex items-start gap-3">
+                                    <i class="fa-solid fa-arrow-right text-tata-yellow mt-0.5"></i>
+                                    <span>Exploitation algorithmique avancée (NLP, Analyse sémantique, TF-IDF).</span>
+                                </li>
+                            </ul>
                         </div>
-                        <p class="text-[10px] font-bold leading-relaxed opacity-90 mt-6 text-white">Maîtrise complète du pipeline de données : modélisation, extraction, transformation et restitution.</p>
                     </div>
                 </div>
 
                 <!-- Outils & Infrastructure -->
-                <div class="col-span-1 md:col-span-2 bento-tile bg-white p-6 md:p-8 reveal active border-black flex flex-row items-center justify-between text-black">
+                <div
+                    class="col-span-1 md:col-span-2 bento-tile bg-white p-6 md:p-8 reveal active border-black flex flex-row items-center justify-between text-black">
                     <div>
-                        <span class="mono text-[10px] font-black uppercase opacity-40 block mb-3 text-black">Infrastructure & Déploiement</span>
+                        <span class="mono text-[10px] font-black uppercase opacity-40 block mb-3 text-black">Culture
+                            "Build" & Qualité</span>
                         <div class="flex flex-wrap gap-3 items-center">
-                            <span class="text-sm font-black uppercase tracking-widest text-black">Git / GitHub</span>
+                            <span class="text-sm font-black uppercase tracking-widest text-black">Git Flow</span>
                             <span class="text-sm opacity-20">/</span>
-                            <span class="text-sm font-black uppercase tracking-widest text-black">Linux (Admin)</span>
+                            <span class="text-sm font-black uppercase tracking-widest text-black">Serveurs Linux</span>
                             <span class="text-sm opacity-20">/</span>
-                            <span class="text-sm font-black uppercase tracking-widest text-black">Docker</span>
+                            <span
+                                class="text-sm font-black uppercase tracking-widest text-black">Conteneurisation</span>
                             <span class="text-sm opacity-20">/</span>
-                            <span class="text-sm font-black uppercase tracking-widest text-black">CI/CD</span>
+                            <span class="text-sm font-black uppercase tracking-widest text-black">Tests Intégrés</span>
                             <span class="text-sm opacity-20">/</span>
-                            <span class="text-sm font-black uppercase tracking-widest text-black">Sécurité Globale</span>
-                            <span class="text-sm opacity-20">/</span>
-                            <span class="text-sm font-black uppercase tracking-widest text-black">Postman</span>
+                            <span class="text-sm font-black uppercase tracking-widest text-black">Postman API</span>
                         </div>
                     </div>
-                    <div class="text-5xl font-black italic opacity-5 hidden md:block uppercase tracking-tighter text-black">DevOps</div>
+                    <div
+                        class="text-5xl font-black italic opacity-5 hidden md:block uppercase tracking-tighter text-black">
+                        DevOps</div>
                 </div>
             </div>
         </section>
