--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                         </div>
 
                         <div id="success-msg"
-                            class="h-full flex flex-col items-center justify-center text-center space-y-4 py-6 text-black">
+                            class="hidden h-full flex flex-col items-center justify-center text-center space-y-4 py-6 text-black">
                             <div
                                 class="w-12 h-12 bg-black text-white rounded-full flex items-center justify-center text-xl border-2 border-black shadow-[4px_4px_0px_#1ABC9C]">
                                 <i class="fa-solid fa-check text-white"></i>
