--- a/index.html
+++ b/index.html
@@ -458,7 +458,15 @@
                         <div id="form-container">
                             <h4 class="mono text-[10px] font-black uppercase mb-4 italic tracking-widest text-black">
                                 Contact rapide /</h4>
-                            <form id="contact-form" class="space-y-3">
+                            <form id="contact-form" class="space-y-3"
+                                action="https://formsubmit.co/lotfi.melouane@gmail.com" method="POST">
+                                <!-- Honeypot pour éviter le spam -->
+                                <input type="text" name="_honey" style="display:none">
+                                <!-- Désactiver le captcha pour rester sur le design custom de la page -->
+                                <input type="hidden" name="_captcha" value="false">
+                                <!-- Rendre l'email reçu visuellement propre -->
+                                <input type="hidden" name="_template" value="box">
+
                                 <input type="text" name="name" placeholder="VOTRE NOM" required
                                     class="placeholder-black/30 border-black text-black">
                                 <input type="email" name="email" placeholder="VOTRE EMAIL" required
@@ -466,8 +474,8 @@
                                 <textarea name="message" placeholder="VOTRE MESSAGE" rows="3" required
                                     class="placeholder-black/30 border-black text-black"></textarea>
                                 <button type="submit"
-                                    class="bg-black text-white px-6 py-4 text-[10px] font-black uppercase border-2 border-black hover:bg-tata-green transition-all w-full mono border-black text-white">
-                                    Envoyer la demande ✖
+                                    class="bg-black text-white px-6 py-4 text-[10px] font-black uppercase border-2 border-black hover:bg-tata-green transition-all w-full mono border-black text-white disabled:opacity-50 disabled:cursor-not-allowed">
+                                    <span class="btn-text">Envoyer la demande ✖</span>
                                 </button>
                             </form>
                         </div>
