Fix UI: Restore success message on redirect from FormSubmit

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                                 <input type="hidden" name="_template" value="box">
                                 <!-- Redirection après envoi -->
                                 <input type="hidden" name="_next"
-                                    value="https://lotfimln.github.io/portfolio-2026/#contact">
+                                    value="https://lotfimln.github.io/portfolio-2026/?submitted=true">
 
                                 <input type="text" name="name" placeholder="VOTRE NOM" required
                                     class="placeholder-black/30 border-black text-black">
